@@ -4,6 +4,8 @@
 	  STM8: Fix float negation, fix large stack-to-stack copy under high register pressure, fix handling of immediate operands.
 	* support/regression/tests/gcc-torture-execute-20030408-1.c:
 	  STM8: Disable test for known front-end bug.
+	* sim/ucsim/stm8.src/inst.cc:
+	  STM8: Fix handling of V and H flags in cpw.
 
 2013-05-22 Philipp Klaus Krause <pkk AT spth.de>
 
